<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spielDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hvs.LigaActivity" >

    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="horizontal" >
        
        <LinearLayout 
        android:id="@+id/spielWeiteresHeimteamLayout"
        android:layout_weight="1"
        android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:padding="5dp"
    	android:orientation="vertical" >
        
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/spielWeiteresHeimteamName"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/spielWeiteresHeimteamToreImSchnittTitel"
                android:id="@+id/spielWeiteresHeimteamToreImSchnittTitel"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
 
                android:id="@+id/spielWeiteresHeimteamToreImSchnitt"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/spielWeiteresHeimteamSiegTitel"
                android:id="@+id/spielWeiteresHeimteamSiegTitel"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"

                android:id="@+id/spielWeiteresHeimteamSieg"/>
        
    	</LinearLayout>
    	
        <LinearLayout 
        android:id="@+id/spielWeiteresGastteamLayout"
        android:layout_weight="1"
        android:layout_width="wrap_content"
    	android:layout_height="fill_parent"
    	android:padding="5dp"
    	android:orientation="vertical" >
        
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/spielWeiteresGastteamName"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/spielWeiteresGastteamToreImSchnittTitel"
                android:id="@+id/spielWeiteresGastteamToreImSchnittTitel"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"

                android:id="@+id/spielWeiteresGastteamToreImSchnitt"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/spielWeiteresGastteamSiegTitel"
                android:id="@+id/spielWeiteresGastteamSiegTitel"/>
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"

                android:id="@+id/spielWeiteresGastteamSieg"/>
        
    	</LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>
